--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "dependencies": {
     "axios": "^0.19.0",
     "vue": "^2.6.10",
+    "vue-clipboard2": "^0.3.1",
     "vuetify": "^2.2.27",
     "webextension-polyfill": "^0.3.1"
   },
