完成同步更新类型的功能

--- a/src/manifest.json
+++ b/src/manifest.json
@@ -1,7 +1,7 @@
 {
   "name": "hitokoto-newtab",
   "description": "A Vue.js web extension changing default new tab to hitokoto",
-  "version": null,
+  "version": "0.1",
   "manifest_version": 2,
   "permissions": ["storage"],
   "browser_action": {
