--- a/src/manifest.json
+++ b/src/manifest.json
@@ -4,6 +4,11 @@
   "version": "0.1",
   "manifest_version": 2,
   "permissions": ["storage"],
+  "icons": { 
+    "16": "icons/icon.png",
+    "48": "icons/icon.png",
+    "128": "icons/icon.png"
+  },
   "browser_action": {
     "default_title": "hitokoto-newtab",
     "default_popup": "popup/popup.html"
